# slam_evalutor

./: .gitignore  README.md  package.xml  requirements.txt  setup.py
.github/workflows/: ci.yml
datasets/: generate_test_bag.py  kitti_0033.yaml  test_bag.yaml
datasets/test_bag/: metadata.yaml
evaluator_core/: __init__.py  log_parser.py  plot_traj.py  runner.py
launch/: evaluate.launch.py
reports/kitti_2011_09_30_drive_0033_mono_imu_20260616_111827/: estimated_traj.txt  gt_traj.txt  report.md
results/latest_ci_run/: estimated_traj.txt  report.md  results.json
slam_evaluator/: report.py
tmp_reports/test_bag_dataset_mono_20260616_145527/: estimated_traj.txt  gt_traj.txt  report.md  results.json
