<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_evaluator</name>
  <version>0.1.0</version>
  <description>A robust SLAM evaluation and validation toolkit for ROS 2. Automates dataset playback, trajectory capture, APE/RPE metric computation via evo, and deep log diagnostics for actionable algorithmic insights.</description>

  <maintainer email="tarunmpc@gmail.com">Tarun</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visual_graph_slam</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
